--- a/src/app/core/components/auth/auth.component.html
+++ b/src/app/core/components/auth/auth.component.html
@@ -1,11 +1,19 @@
-<div class="container">
-  <form [formGroup]="myForm" class="login-form" (ngSubmit)="onSubmit() ">
-    <mdc-text-field label="Login" name="txt-field-standard" required helperPersistent class="login-input" type="text"
-      formControlName="userLogin" autocomplete="off"></mdc-text-field>
-    <mdc-text-field label="Password" name="txt-field-standard" required helperPersistent class="login-input"
-      type="password" formControlName="userPassword" autocomplete="off"></mdc-text-field>
+<div class="container login-form-container">
+  <form [formGroup]="myForm" class="login-form" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="fill" class="login-input">
+      <mat-label>Enter your login</mat-label>
+      <input matInput required formControlName="userLogin" autocomplete="off">
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="login-input" autocomplete="off">
+      <mat-label>Enter your password</mat-label>
+      <input matInput [type]="hide ? 'password' : 'text'" formControlName="userPassword" required>
+      <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide">
+        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+    </mat-form-field>
     <div class="login-button-container">
-      <button mdc-button unelevated class="btn btn-default login-button" [disabled]="myForm.invalid">Sign in</button>
+      <button mat-flat-button color="primary" class="login-button" [disabled]="myForm.invalid">Sign in</button>
     </div>
   </form>
 </div>
