--- a/src/app/core/components/auth/auth.component.scss
+++ b/src/app/core/components/auth/auth.component.scss
@@ -1,17 +1,27 @@
 .login-input {
-    width: 250px;
-    margin: o auto;
-    margin-bottom: 20px;
+  width: 250px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
+
 .login-form {
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
+
 .login-button {
-    &-container {
-        width: 100%;
-        text-align: center;
-    }
+  font-size: 20px;
+  font-weight: normal;
+
+  &-container {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.login-form-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
