--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,41 @@
-@use '@material/theme' with (
-  $primary: #0082CA,
-  $secondary: #03527c,
-  $background: #fff,
-);
 
-// MDC Typography
-@use '@material/typography/mdc-typography';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
 
-// Angular MDC
-@use '@angular-mdc/theme/material';
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
 
-// use for textField;
-@use '@material/textfield/mdc-text-field';
-@use '@material/textfield/_index' as textfield;
-@use '@material/form-field/_index' as form-field;
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$exadelBonus-primary: mat-palette($mat-indigo);
+$exadelBonus-accent: mat-palette($mat-pink, A200, A100, A400);
 
-// use for button
-@use '@material/button/mdc-button';
-@use '@material/button';
+// The warn palette is optional (defaults to red).
+$exadelBonus-warn: mat-palette($mat-red);
 
-// use for toggle-button icons
-@use '@material/icon-button/mdc-icon-button';
-@use '@material/icon-button/_index' as icon-button;
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$exadelBonus-theme: mat-light-theme((
+  color: (
+    primary: $exadelBonus-primary,
+    accent: $exadelBonus-accent,
+    warn: $exadelBonus-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($exadelBonus-theme);
 
 // common styles
 html {
   box-sizing: border-box;
-}
-
-body {
-  margin: 0;
 }
 
 *,
@@ -43,3 +49,6 @@ body {
   margin: 0 auto;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
