--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,34 +1,37 @@
 <header>
   <nav>
     <section class="logo">
-      <span class="logo-img">e</span><span class="logo-text">exadel bonus+</span>
+      <img class="logo-img" src="assets/images/logo.png" alt="logo image, letter - e" />
+      <span class="logo-text">exadel bonus+</span>
     </section>
-    <ul [ngClass]="{'menu': true, 'hide': isMenuHide}">
-      <li class="menu-item">
-        <span class="login-as-label">You're login as:</span>
-        <span class="login-as-text">{{name}} {{surname}} </span>
-      </li>
-      <li class="menu-item">
-        <a>Find place</a>
-      </li>
-      <li class="menu-item">
-        <a>History</a>
-      </li>
-      <li class="menu-item">
-        <a>Add bonus</a>
-      </li>
-      <li class="menu-item">
-        <a>Bonuses</a>
-      </li>
-      <li class="menu-item">
-        <a>Users</a>
-      </li>
-      <li class="menu-item">
-        <a>Sign out</a>
-      </li>
-    </ul>
-    <button mat-icon-button class="menu-icon" aria-label="Menu icon" (click)="this.toggleMenu()">
-      <mat-icon>menu</mat-icon>
-    </button>
+    <section [ngClass]="{'menu-container': true, 'hide': isMenuHide}">
+      <ul class="menu">
+        <li class="menu-item">
+          <span class="login-as-label">You're login as:</span>
+          <span class="login-as-text">{{firstName}} {{lastName}} </span>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/home']" [routerLinkActive]="'active'" (click)="hideMenu()">Find place</a>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/history']" [routerLinkActive]="'active'" (click)="hideMenu()">History</a>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/add-bonus']" [routerLinkActive]="'active'" (click)="hideMenu()">Add bonus</a>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/bonuses']" [routerLinkActive]="'active'" (click)="hideMenu()">Bonuses</a>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/users']" [routerLinkActive]="'active'" (click)="hideMenu()">Users</a>
+        </li>
+        <li class="menu-item">
+          <a [routerLink]="['/logout']" (click)="hideMenu()">Sign out</a>
+        </li>
+      </ul>
+    </section>
+      <button mat-icon-button aria-label="Menu icon" [ngClass]="{'menu-icon': true, 'fixed': !isMenuHide}" (click)="this.toggleMenu()">
+        <mat-icon>menu</mat-icon>
+      </button>
   </nav>
 </header>
