--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'styles/theme.scss';
+
+html, body { height: 100%; overflow-x: hidden; }
+body { margin: 0; font-family: 'Mulish', sans-serif; }
