--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <section class="logo">
-      <img class="logo-img" src="assets/images/logo.png" alt="logo image, letter - e" />
+      <img class="logo-img" src="assets/images/logo.png" alt="exadel logo" />
       <span class="logo-text">exadel bonus+</span>
     </section>
     <section [ngClass]="{'menu-container': true, 'hide': isMenuHide}">
