--- a/src/app/core/components/map/office-popup/office-popup.component.html
+++ b/src/app/core/components/map/office-popup/office-popup.component.html
@@ -1,4 +1,4 @@
 <div>
-    <h1>Data: {{data.city}}</h1>
-    <button (click)="log()">office-popup works!</button>
+    <h1>{{data.city}}</h1>
+    <button (click)="clickTrigger()">office-popup works!</button>
 </div>
