Change the labels on the buttons

--- a/src/app/core/components/map/office-popup/office-popup.component.html
+++ b/src/app/core/components/map/office-popup/office-popup.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>{{data.city}}</h1>
-    <button (click)="clickTrigger()">office-popup works!</button>
+    <button (click)="clickTrigger()">Перейти</button>
 </div>
