add material style

--- a/src/app/core/components/language-switcher/language-switcher.component.html
+++ b/src/app/core/components/language-switcher/language-switcher.component.html
@@ -1,1 +1,1 @@
-<button class="toggleButton" appLanguageSwitcher #changedLanguage value={{language}}>{{changedLanguage.value}}</button>
+<button class="toggleButton" mat-mini-fab appLanguageSwitcher color="primary">{{language}}</button>
