--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,7 +8,7 @@
       <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()">
         <li>
           <span class="login-as-label">You're login as:</span>
-          <span class="login-as-text">{{firstName}} {{lastName}} </span>
+          <span class="login-as-text">{{user.first_name}} {{user.last_name}} </span>
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home']" [routerLinkActive]="'active'">Find place</a>
