--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,25 +8,25 @@
       <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()">
         <li>
           <span class="login-as-label">You're login as:</span>
-          <span class="login-as-text">{{user.first_name}} {{user.last_name}} </span>
+          <span class="login-as-text">{{user?.first_name}} {{user?.last_name}} </span>
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home']" [routerLinkActive]="'active'">Find place</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/history']" [routerLinkActive]="'active'">History</a>
+          <a [routerLink]="['history']" [routerLinkActive]="'active'">History</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/add-bonus']" [routerLinkActive]="'active'">Add bonus</a>
+          <a [routerLink]="['add-bonus']" [routerLinkActive]="'active'">Add bonus</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/bonuses']" [routerLinkActive]="'active'">Bonuses</a>
+          <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">Bonuses</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/users']" [routerLinkActive]="'active'">Users</a>
+          <a [routerLink]="['users']" [routerLinkActive]="'active'">Users</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/logout']">Sign out</a>
+          <a>Sign out</a>
         </li>
       </ul>
     </section>
