--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -27,6 +27,10 @@ a:not(.active) {
 
 .menu-container {
   transition: .3s ease-in-out;
+  @media screen and (min-width: 1279.5px){
+  display: flex;
+  align-items: center;
+  }
 }
 
 .menu {
@@ -81,6 +85,7 @@ a:not(.active) {
 
     @media screen and(max-width: 1279.5px) {
       top: 10px;
+      left: 10px;
       position: absolute;
     }
 
