--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -7,26 +7,26 @@
     <section class="menu-container" [ngClass]="{'hide': isMenuHide}">
       <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()">
         <li>
-          <span class="login-as-label">You're login as:</span>
+          <span class="login-as-label">{{'HEADER.LOGINED_AS' | translate}}</span>
           <span class="login-as-text">{{user?.first_name}} {{user?.last_name}} </span>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['/home']" [routerLinkActive]="'active'">Find place</a>
+          <a [routerLink]="['/home']" [routerLinkActive]="'active'">{{'HEADER.FINDE_PLACE' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['history']" [routerLinkActive]="'active'">History</a>
+          <a [routerLink]="['history']" [routerLinkActive]="'active'">{{'HEADER.HISTORY' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['add-bonus']" [routerLinkActive]="'active'">Add bonus</a>
+          <a [routerLink]="['add-bonus']" [routerLinkActive]="'active'">{{'HEADER.ADD_BONUS' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">Bonuses</a>
+          <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">{{'HEADER.BONUSES' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['users']" [routerLinkActive]="'active'">Users</a>
+          <a [routerLink]="['users']" [routerLinkActive]="'active'">{{'HEADER.USER' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a>Sign out</a>
+          <a>{{'HEADER.SIGN_OUT' | translate}}</a>
         </li>
       </ul>
       <div class="language-switcher">
