--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -1,28 +1,38 @@
 .login-input {
-    width: 250px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-  }
-  
-  .login-form {
-    width: 250px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 250px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.login-form {
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.login-button {
+  font-size: 20px;
+  font-weight: normal;
+
+  &-container {
+    width: 100%;
     text-align: center;
   }
-  
-  .login-button {
-    font-size: 20px;
-    font-weight: normal;
-  
-    &-container {
-      width: 100%;
-      text-align: center;
-    }
-  }
-  
-  .login-form-container {
-    height: 100%;
+}
+
+.login-form-container {
+  height: 100%;
+  margin-top: 50px;
+
+  @media screen and (min-width: 768px) {
+    width: 400px;
+    height: 400px;
+    border: 1px solid#0083ca;
+    border-radius: 2px 2px 2px 2px;
+    box-shadow: 0px 4px 4px #00000040;
     display: flex;
     align-items: center;
   }
+}
