--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/theme.scss';
+@import 'styles/adaptive-screen.scss';
 
 html, body { height: 100%; overflow-x: hidden; }
 body { margin: 0; font-family: 'Mulish', sans-serif; }
