--- a/src/app/core/components/bonus-detail/bonus-detail.component.html
+++ b/src/app/core/components/bonus-detail/bonus-detail.component.html
@@ -1,16 +1,21 @@
-<div *ngIf="bonus">
-  <h2>Bonus Details</h2>
-  <h2>{{ bonus.type | uppercase }}</h2>
-  <div><span>id: </span>{{ bonus.id }}</div>
-  <h3><strong>company: {{ bonus.company.name }}</strong> <span>Discount:{{ bonus.discount }}</span></h3>
-  <div>
-    <p>{{ bonus.description }}</p>
-    <ul>
-      <li>Date Start: {{ bonus.dateStart }}</li>  
-      <li>Date End: {{ bonus.dateEnd }}</li> 
-    </ul>
+<div  class="bonus-card">
+<mat-card *ngIf="bonus">
+  <mat-card-subtitle class="company-name">{{ bonus.company.name }}</mat-card-subtitle>
+  <mat-card-title class="type">{{ bonus.type | uppercase }}</mat-card-title>
+  <mat-card-content class="discription-wrapper">
+    <p class="discription">{{ bonus.description }}</p>
+    <div class="rating-discount-wrapper"  fxLayout="row" fxLayoutAlign="space-between center">
+      <span class="stars">
+      <mat-icon>star</mat-icon>
+      <mat-icon>star</mat-icon>
+      <mat-icon>star</mat-icon>
+      </span>
+      <span class="spacer"></span>
+      <span>Discount: {{ bonus.discount }}%</span>
+    </div>
+  </mat-card-content>
+  <div class="button-wrapper">
+    <button  mat-raised-button color="primary" (click)="onApply()" class="apply-button">Apply</button>
   </div>
-  <p>Contacts: {{bonus.company.phone}} {{bonus.company.email}}</p>
-
-  <button (click)="onUse()">Want to use</button>
+</mat-card>
 </div>
