--- a/src/app/core/components/map/office-popup/office-popup.component.html
+++ b/src/app/core/components/map/office-popup/office-popup.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>{{office.city}}</h1>
-    <button (click)="clickTrigger()">{{'POPUP.GO' | translate}}</button>
+    <button (click)="clickTrigger()">{{'POPUP.go' | translate}}</button>
 </div>
