--- a/src/app/core/components/not-found/not-found.component.html
+++ b/src/app/core/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <section class="info-container">
-  <article><span class="error-code">404</span><span class="error-text">Not found</span></article>
+  <article><span class="error-code">404</span><span class="error-text">{{'notFound' | translate}}</span></article>
   <div class="sad-icon-container">
     <mat-icon class="sad-icon">sentiment_very_dissatisfied</mat-icon>
     <div class="tear"></div>
