--- a/src/app/core/components/not-found/not-found.component.scss
+++ b/src/app/core/components/not-found/not-found.component.scss
@@ -27,7 +27,7 @@
   display: block;
   margin: 30px calc(50% - 75px) 150px;
   font-size: 150px;
-  opacity: 70%;
+  opacity: 0.7;
 }
 
 .sad-icon-container {
