show datepicker at home page

--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-map-container></app-map-container>
 <p>Home works!</p>
+<app-datepicker></app-datepicker>
 <router-outlet></router-outlet>
 
