--- a/src/app/core/components/bonus-detail/bonus-detail.component.html
+++ b/src/app/core/components/bonus-detail/bonus-detail.component.html
@@ -1,23 +1,38 @@
-<div  class="bonus-card">
-<mat-card *ngIf="bonus">
-  <mat-card-subtitle class="company-name">{{ bonus.company.name }}</mat-card-subtitle>
-  <mat-card-title class="type">{{ bonus.type | uppercase }}</mat-card-title>
-  <mat-card-content class="discription-wrapper">
-    <p class="discription">{{ bonus.description }}</p>
-    <p>Expiration date: {{ bonus.dateEnd }}</p>
-    <div class="rating-discount-wrapper" fxLayout="row" fxLayoutAlign="space-between center">
-      <!-- TODO: change icons to component with rating -->
-      <span class="stars">
-      <mat-icon>star</mat-icon>
-      <mat-icon>star</mat-icon>
-      <mat-icon>star</mat-icon>
-      </span>
-      <span class="spacer"></span>
-      <span>Discount: {{ bonus.discount }}%</span>
+<div class="bonus-card-wrapper">
+  <mat-card *ngIf="bonus" class="bonus-card">
+    <mat-card-subtitle class="company-name">
+      {{ bonus.company.name }}</mat-card-subtitle
+    >
+    <mat-card-title class="type" class="title">{{
+      bonus.type | uppercase
+    }}</mat-card-title>
+    <mat-card-content class="discription-wrapper">
+      <p class="discription">{{ bonus.description }}</p>
+      <p>Expiration date: {{ bonus.dateEnd }}</p>
+      <div
+        class="rating-discount-wrapper"
+        fxLayout="row"
+        fxLayoutAlign="space-between center"
+      >
+        <!-- TODO: change icons to component with rating -->
+        <span class="stars">
+          <mat-icon>star</mat-icon>
+          <mat-icon>star</mat-icon>
+          <mat-icon>star</mat-icon>
+        </span>
+        <span class="spacer"></span>
+        <span>Discount: {{ bonus.discount }}%</span>
+      </div>
+    </mat-card-content>
+    <div class="button-wrapper">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="apply()"
+        class="apply-button"
+      >
+        Apply
+      </button>
     </div>
-  </mat-card-content>
-  <div class="button-wrapper">
-    <button  mat-raised-button color="primary" (click)="onApply()" class="apply-button">Apply</button>
-  </div>
-</mat-card>
+  </mat-card>
 </div>
