--- a/src/app/core/components/bonus-detail/bonus-detail.component.scss
+++ b/src/app/core/components/bonus-detail/bonus-detail.component.scss
@@ -1,24 +1,27 @@
-.bonus-card{
-  margin: 0 auto;
+.bonus-card-wrapper {
   padding: 10px;
   max-width: 600px;
+  margin: 0 auto;
 
-  .rating-discount-wrapper{
-    display: flex;
-
-    .spacer{
-      flex: 1 1 auto;
+  .bonus-card {
+    .mat-card-title {
+      color: #0082ca;
     }
-  }
+    .rating-discount-wrapper {
+      display: flex;
 
-  .button-wrapper{
-    display: flex;
-    justify-content: center;
-
-    .apply-button{
-      min-width: 30%;
+      .spacer {
+        flex: 1 1 auto;
+      }
     }
 
-  }
+    .button-wrapper {
+      display: flex;
+      justify-content: center;
 
+      .apply-button {
+        min-width: 30%;
+      }
+    }
+  }
 }
