--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -26,7 +26,7 @@
           <a [routerLink]="['users']" [routerLinkActive]="'active'">{{'header.user' | translate}}</a>
         </li>
         <li class="menu-item">
-          <a>{{'header.signOut' | translate}}</a>
+          <a (click)="logout()">{{'header.signOut' | translate}}</a>
         </li>
       </ul>
       <div class="language-switcher">
