add bonus marker icons

--- a/src/app/core/components/map/marker-icon/marker-icon.component.scss
+++ b/src/app/core/components/map/marker-icon/marker-icon.component.scss
@@ -3,7 +3,7 @@
     width: 15px;
     height: 15px;
     background: #fff;
-    border: 6px solid #0082CA;
+    border: 6px solid #e74c3c;
     box-shadow: -2px 2px 2px 0px #aaa;
     border-radius: 50% 50% 50% 0;
     transform: rotate(-45deg);
