--- a/src/app/core/components/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/core/components/map/bonus-popup/bonus-popup.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>{{bonus.type}}</h1>
-    <button (click)="log($event)">{{'popup.detail' | translate}}</button>
+    <button mat-flat-button color="primary" (click)="log($event)">{{'popup.detail' | translate}}</button>
 </div>
