add Marker Clustering

--- a/src/app/core/components/map/map-view/map-view.component.html
+++ b/src/app/core/components/map/map-view/map-view.component.html
@@ -1,5 +1,6 @@
 <div style="height: 300px;"
      leaflet 
      [leafletOptions]="options"
-     (leafletMapReady)="onMapReady($event)">
+     (leafletMapReady)="onMapReady($event)"
+>
 </div>
