--- a/src/app/core/components/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/core/components/map/bonus-popup/bonus-popup.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>{{bonus.type}}</h1>
-    <a mat-flat-button color="primary" href="{{markerLink}}" target="_blank">{{'popup.go' | translate}}</a>
+    <a mat-flat-button color="primary" href="{{markerLink}}" target="_blank">{{'popup.detail' | translate}}</a>
 </div>
