--- a/src/app/core/components/map/map-view/map-view.component.html
+++ b/src/app/core/components/map/map-view/map-view.component.html
@@ -1,4 +1,4 @@
-<div style="height: 300px;"
+<div style="height: 80vh;"
      leaflet 
      [leafletOptions]="options"
      (leafletMapReady)="onMapReady($event)"
