Show bonus in list by click detail-button from the map

--- a/src/app/core/components/bonus-list/bonus-list.component.html
+++ b/src/app/core/components/bonus-list/bonus-list.component.html
@@ -1,3 +1,8 @@
+<app-bonus-detail
+  *ngIf="bonusFromMap"
+  [bonus]="bonusFromMap"
+></app-bonus-detail>
+
 <div *ngFor="let bonus of bonuses" class="bonus-list">
   <app-bonus-detail
     [bonus]="bonus"
