--- a/src/app/core/components/bonus-list/bonus-list.component.html
+++ b/src/app/core/components/bonus-list/bonus-list.component.html
@@ -1,6 +1,3 @@
 <div *ngFor="let bonus of bonuses" class="bonus-list">
-  <app-bonus-detail
-    [bonus]="bonus"
-    class="bonus-detail-component"
-  ></app-bonus-detail>
+  <app-bonus-detail [bonus]="bonus" class="bonus-detail-component"></app-bonus-detail>
 </div>
