--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -23,22 +23,22 @@
           }}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['history']" [routerLinkActive]="'active'">{{
+          <a [routerLink]="['/home/history']" [routerLinkActive]="'active'">{{
             "header.history" | translate
           }}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['add-bonus']" [routerLinkActive]="'active'">{{
+          <a [routerLink]="['/home/add-bonus']" [routerLinkActive]="'active'">{{
             "header.addBonus" | translate
           }}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">{{
+          <a [routerLink]="['/home/bonuses']" [routerLinkActive]="'active'">{{
             "header.bonuses" | translate
           }}</a>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['users']" [routerLinkActive]="'active'">{{
+          <a [routerLink]="['/home/users']" [routerLinkActive]="'active'">{{
             "header.user" | translate
           }}</a>
         </li>
