--- a/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.html
+++ b/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.html
@@ -21,12 +21,11 @@
       </mat-form-field>
       <mat-form-field class="add-bonus-input" appearance="fill" aria-autocomplete="off">
         <mat-label>Vendor phone</mat-label>
-        <span matPrefix>+ &nbsp;</span>
         <input
-          type="tel"
           matInput
-          placeholder="555-555-1234"
+          placeholder="+00(000) 000-00-00"
           formControlName="vendorPhone"
+          mask="+00(000) 000-00-00"
         />
       </mat-form-field>
       <mat-form-field class="add-bonus-input" appearance="fill">
