--- a/src/app/core/components/map/map-view/map-view.component.html
+++ b/src/app/core/components/map/map-view/map-view.component.html
@@ -1,6 +1,6 @@
-<div style="height: 80vh;"
-     leaflet 
-     [leafletOptions]="options"
-     (leafletMapReady)="onMapReady($event)"
->
-</div>
+<div
+  style="height: 80vh"
+  leaflet
+  [leafletOptions]="options"
+  (leafletMapReady)="onMapReady($event)"
+></div>
