--- a/src/app/core/components/bonus-list/bonus-list.component.html
+++ b/src/app/core/components/bonus-list/bonus-list.component.html
@@ -1,9 +1,9 @@
 <app-bonus-detail
-  *ngIf="bonusFromMap"
-  [bonus]="bonusFromMap"
+  *ngIf="bonusMap"
+  [bonus]="bonusMap"
 ></app-bonus-detail>
 
-<div *ngFor="let bonus of bonuses" class="bonus-list">
+<div *ngFor="let bonus of bonuses; trackBy: trackById" class="bonus-list">
   <app-bonus-detail
     [bonus]="bonus"
     class="bonus-detail-component"
