linting files, prettier

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -17,22 +17,22 @@
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home/history']" [routerLinkActive]="'active'">{{
-            "header.history" | translate
+            'header.history' | translate
           }}</a>
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home/add-bonus']" [routerLinkActive]="'active'">{{
-            "header.addBonus" | translate
+            'header.addBonus' | translate
           }}</a>
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home/bonuses']" [routerLinkActive]="'active'">{{
-            "header.bonuses" | translate
+            'header.bonuses' | translate
           }}</a>
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home/users']" [routerLinkActive]="'active'">{{
-            "header.user" | translate
+            'header.user' | translate
           }}</a>
         </li>
         <li class="menu-item">
