--- a/src/app/core/components/add-bonus/add-bonus.component.html
+++ b/src/app/core/components/add-bonus/add-bonus.component.html
@@ -1,1 +1,1 @@
-<app-add-bonus-form></app-add-bonus-form>
+<app-add-bonus-form (onAddAddress)="onAddAddress($event)" [locations]="locations"></app-add-bonus-form>
