--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -4,6 +4,7 @@ header {
   width: 100vw;
   box-shadow: 0 5px 4px rgba(66, 66, 66, 0.25);
   margin-bottom: 15px;
+
   nav {
     display: flex;
     justify-content: space-between;
@@ -27,25 +28,30 @@ a:not(.active) {
 
 .menu-container {
   transition: 0.3s ease-in-out;
+
   @media screen and (min-width: 1279.5px) {
     display: flex;
     align-items: center;
+    margin-right: 20px;
   }
 }
 
 .menu {
   margin: 14px;
   padding-inline-start: 0;
+
   .menu-item {
     list-style: none;
     display: inline-block;
     font-size: 20px;
+
     a {
       text-decoration: none;
       padding: 0 15px;
       width: 100%;
       height: 100%;
       opacity: 0.85;
+
       &:hover {
         color: $theme-color;
       }
@@ -57,10 +63,12 @@ a:not(.active) {
   height: 100%;
   color: $theme-color;
   display: flex;
+
   .logo-img {
     display: inline-block;
     margin: auto 5px;
   }
+
   .logo-text {
     display: inline-block;
     font-size: 25px;
@@ -70,8 +78,25 @@ a:not(.active) {
   }
 }
 
+.nav-menu {
+  position: relative;
+}
+
 .language-switcher {
-  display: inline-block;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+
+  @media screen and(max-width: 1279.5px) {
+    width: 100%;
+    top: 20px;
+    margin-right: 30px;
+    z-index: 20000;
+  }
 
   &-button {
     display: flex;
@@ -80,43 +105,42 @@ a:not(.active) {
     width: 25px;
     height: 25px;
     font-size: 13px;
-    justify-content: center;
-    align-items: center;
-
-    @media screen and(max-width: 1279.5px) {
-      top: 10px;
-      left: 10px;
-      position: absolute;
-    }
   }
 }
 
-@media (min-width: 1280px), (min-device-width: 1280px) {
+@media (min-width: 1280px),
+(min-device-width: 1280px) {
   .menu-icon {
     display: none;
   }
+
   .login-as-label,
   .login-as-text {
     display: none;
   }
+
   .logo {
     margin: auto 10px;
+
     .logo-img {
       height: 40px;
     }
   }
 }
 
-@media (max-width: 1279px), (max-device-width: 1279px) {
+@media (max-width: 1279px),
+(max-device-width: 1279px) {
   .menu-icon {
     display: block;
     margin: auto 0;
+
     &.fixed {
       z-index: 10000;
       position: fixed;
       right: 10px;
     }
   }
+
   .menu-container {
     z-index: 10000;
     position: fixed;
@@ -126,20 +150,25 @@ a:not(.active) {
     width: 300px;
     background-color: #fff;
     overflow-y: scroll;
+
     &.hide {
       right: -310px;
     }
+
     &:not(.hide) {
       box-shadow: 0 0 20px -5px #000;
     }
   }
+
   .menu {
     overflow-y: scroll;
     padding: 0 0 15px 0;
+
     .menu-item {
       display: block;
       margin: 20px auto;
       padding: 5px 15px;
+
       a {
         display: block;
         width: 100%;
@@ -147,19 +176,27 @@ a:not(.active) {
       }
     }
   }
+
   .login-as-label,
   .login-as-text {
     text-align: center;
     display: block;
   }
+
   .login-as-label {
     opacity: 0.8;
     font-size: 16px;
   }
+
   .logo {
     margin: auto 0;
+
     .logo-img {
       height: 30px;
     }
+  }
+
+  .isLogout {
+    margin-right: 0px;
   }
 }
