--- a/src/app/core/components/add-bonus/add-bonus-button/add-bonus-button.component.html
+++ b/src/app/core/components/add-bonus/add-bonus-button/add-bonus-button.component.html
@@ -1,3 +1,3 @@
 <div class="add-bonus-btn-container">
-  <button (click)="onOpenForm()" class="add-btn" mat-flat-button color="primary">Add bonus</button>
+  <button (click)="onOpenForm()" class="add-btn" mat-flat-button color="primary">{{'addBonus.addBonusBtn' | translate}}</button>
 </div>
