--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -12,7 +12,7 @@
         </li>
         <li class="menu-item">
           <a [routerLink]="['/home']" [routerLinkActive]="'active'">{{
-            'header.findePlace' | translate
+            'header.findPlace' | translate
           }}</a>
         </li>
         <li class="menu-item">
