add bonus-list-view component

--- a/src/app/core/components/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/core/components/map/bonus-popup/bonus-popup.component.html
@@ -1,4 +1,4 @@
 <div>
   <h1>{{ bonus.type }}</h1>
-  <button (click)="showBonusMap(bonus)">{{ "popup.detail" | translate }}</button>
+  <button (click)="showBonusMap()">{{ "popup.detail" | translate }}</button>
 </div>
