--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-map-container></app-map-container>
-<app-bonus-list></app-bonus-list>
+<app-bonus-list-container></app-bonus-list-container>
 <router-outlet></router-outlet>
