--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer>
-  © 2021 <a href="https://exadel.com" target="_blank">Exadel, Inc.</a> All rights reserved.
+  © 2021 <a href="https://exadel.com" target="_blank">Exadel, Inc.</a> All
+  rights reserved.
 </footer>
