--- a/src/app/core/components/map/office-popup/office-popup.component.html
+++ b/src/app/core/components/map/office-popup/office-popup.component.html
@@ -1,4 +1,4 @@
 <div>
-    <h1>{{office.city}}</h1>
-    <button (click)="clickTrigger()">{{'popup.go' | translate}}</button>
+  <h1>{{ office.city }}</h1>
+  <button (click)="clickTrigger()">{{ "popup.go" | translate }}</button>
 </div>
