--- a/src/app/core/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/core/components/bonus-list-container/bonus-list-container.component.html
@@ -1,2 +1,2 @@
-<app-bonus-detail [bonus] = 'bonusMap'></app-bonus-detail>
-<app-bonus-list-view [bonuses] = 'bonuses'></app-bonus-list-view>
+<app-bonus-detail [bonus]="bonusMap"></app-bonus-detail>
+<app-bonus-list-view [bonuses]="bonuses"></app-bonus-list-view>
