--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,35 +1,36 @@
 <div class="container login-form-container">
-    <form class="login-form" (ngSubmit)="onSubmit()" [formGroup]="myForm">
-      <mat-form-field class="login-input" appearance="fill" >
-        <mat-label>Enter your login</mat-label>
-        <input 
-          matInput 
-          formControlName="userLogin" 
-          autocomplete="off">
-      </mat-form-field>
-      <mat-form-field class="login-input" 
-        appearance="fill"  
-        autocomplete="off">
-        <mat-label>Enter your password</mat-label>
-        <input 
-          matInput 
-          formControlName="userPassword"
-          [type]="hide ? 'password' : 'text'">
-        <button (click)="onToggleClickPasswordIcon()"
-          mat-icon-button 
-          matSuffix 
-          type="button"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-      <div class="login-button-container">
-        <button class="login-button" 
-          mat-flat-button
-          color="primary"
-          [disabled]="myForm.invalid">Sign in</button>
-      </div>
-    </form>
-  </div>
-  
+  <form class="login-form" (ngSubmit)="onSubmit()" [formGroup]="myForm">
+    <mat-form-field class="login-input" appearance="fill">
+      <mat-label>Enter your login</mat-label>
+      <input matInput formControlName="userLogin" autocomplete="off" />
+    </mat-form-field>
+    <mat-form-field class="login-input" appearance="fill" autocomplete="off">
+      <mat-label>Enter your password</mat-label>
+      <input
+        matInput
+        formControlName="userPassword"
+        [type]="hide ? 'password' : 'text'"
+      />
+      <button
+        (click)="onToggleClickPasswordIcon()"
+        mat-icon-button
+        matSuffix
+        type="button"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide"
+      >
+        <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+      </button>
+    </mat-form-field>
+    <div class="login-button-container">
+      <button
+        class="login-button"
+        mat-flat-button
+        color="primary"
+        [disabled]="myForm.invalid"
+      >
+        Sign in
+      </button>
+    </div>
+  </form>
+</div>
